--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
-  "name": "grunt-dustjs",
+  "name": "grunt-dustjs-configurable",
   "description": "Grunt task to compile Dust.js templates.",
-  "version": "1.2.1",
-  "homepage": "https://github.com/STAH/grunt-dustjs",
+  "version": "1.0.0",
+  "homepage": "https://github.com/paypal/grunt-dustjs-configurable",
   "author": {
     "name": "Stanislav Lesnikov",
     "email": "stan@nashdot.com"
   },
+  "contributors": [
+    "Aria Stewart <aredridel@dinhe.net>"
+  ]
   "repository": {
     "type": "git",
-    "url": "git://github.com/STAH/grunt-dustjs.git"
+    "url": "git://github.com/paypal/grunt-dustjs-configurable.git"
   },
   "bugs": {
-    "url": "https://github.com/STAH/grunt-dustjs/issues"
+    "url": "https://github.com/paypal/grunt-dustjs-configurable/issues"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/STAH/grunt-dustjs/blob/master/LICENSE-MIT"
+      "url": "https://github.com/paypal/grunt-dustjs-configurable/blob/master/LICENSE-MIT"
     }
   ],
   "main": "Gruntfile.js",
   "bin": {
-    "grunt-dustjs": "bin/grunt-dustjs"
+    "grunt-dustjs-configurable": "bin/grunt-dustjs-configurable"
   },
   "engines": {
     "node": "*"
